# LLM-Lang-Design-How-do-agents-use-languages

./: .gitignore  README.md
agents/: agent.py  agent_mcp.py
data_baseline/gpt-5/haskell/rep10/: run.sh  test.sh  todo-app.cabal
data_baseline/gpt-5/haskell/rep10/app/: Main.hs
data_baseline/gpt-5/haskell/rep2/: run.sh  test.sh  todo-hs.cabal
data_baseline/gpt-5/haskell/rep2/app/: Main.hs
data_baseline/gpt-5/haskell/rep3/: run.sh  test.sh  todo-app.cabal
data_baseline/gpt-5/haskell/rep3/app/: Main.hs
data_baseline/gpt-5/haskell/rep4/: run.sh  test.sh  todo-app.cabal
data_baseline/gpt-5/haskell/rep4/app/: Main.hs
data_baseline/gpt-5/haskell/rep5/: run.sh  test.sh  todoapp.cabal
data_baseline/gpt-5/haskell/rep5/app/: Main.hs
data_baseline/gpt-5/haskell/rep6/: README.md  run.sh  test.sh  todo-app.cabal
data_baseline/gpt-5/haskell/rep6/app/: Main.hs
data_baseline/gpt-5/haskell/rep7/: Main.hs  package.yaml  run.sh  test.sh  todo-server.cabal
data_baseline/gpt-5/haskell/rep8/: cabal.project  run.sh  test.sh  todo-server.cabal
data_baseline/gpt-5/haskell/rep8/app/: Main.hs
data_baseline/gpt-5/haskell/rep9/: run.sh  test.sh  todo-app.cabal
data_baseline/gpt-5/haskell/rep9/app/: Main.hs
data_baseline/gpt-5/rust/rep5/: Cargo.toml  run.sh  test.sh
data_baseline/gpt-5/rust/rep5/src/: main.rs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep1/: README.md  package.yaml  run.sh  test_api.sh  todo-api.cabal
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep1/app/: Main.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep1/src/: Lib.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep10/: README.md  package.yaml  rep10.cabal  run.sh  test.sh
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep10/app/: Main.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep10/src/: Lib.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep2/: run.sh  todo-app.cabal
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep2/src/: Main.hs  Main.hs.bak
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep3/: CHANGELOG.md  rep3.cabal  run.sh  test_server.sh
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep3/src/: Main.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep4/: README.md  cabal.config  run.sh  server_test.hs  test.sh  todo-app.cabal
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep4/src/: Main.hs  TestMain.hs  backup_Main.hs  temp_main.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep5/: run.sh  setup_cookie_auth_fix.hs  todo-app.cabal
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep5/src/: Main.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep5/tests/: simple_test.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep6/: TestSimple.hs  TodoAPI.cabal  test_server.sh
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep6/src/: Auth.hs  Main.hs  Models.hs  Types.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep7/: run.sh  temp_patch  todo-app.cabal
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep7/app/: Main.hs  Main.hs.bak
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep8/: LICENSE  run.sh  test_todo_api.sh  todo-app.cabal
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep8/src/: Main.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep9/: cabal.project  package.yaml  run.sh  temp_Lib.hs  test_scotty.hs  test_server.sh  todo-app.cabal
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep9/app/: Main.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/haskell/rep9/src/: Lib.hs  Main.hs  TestEndpoint.hs
data_baseline/openrouter__qwen__qwen3-coder-plus/rust/rep1/: Cargo.toml  run.sh
data_baseline/openrouter__qwen__qwen3-coder-plus/rust/rep1/src/: main.rs
data_baseline/openrouter__qwen__qwen3-coder-plus/rust/rep2/: Cargo.toml  run.sh
data_baseline/openrouter__qwen__qwen3-coder-plus/rust/rep2/src/: main.rs
data_baseline/openrouter__qwen__qwen3-coder-plus/rust/rep3/: Cargo.toml  cookies.txt  run.sh  test_server.sh
data_baseline/openrouter__qwen__qwen3-coder-plus/rust/rep3/src/: main.rs
data_baseline/openrouter__qwen__qwen3-coder-plus/rust/rep5/: Cargo.toml  response.json  run.sh  test_api.sh
data_baseline/openrouter__qwen__qwen3-coder-plus/rust/rep5/src/: main.rs
data_baseline/openrouter__qwen__qwen3-coder-plus/rust/rep5/todo_server/: Cargo.toml
data_baseline/openrouter__qwen__qwen3.7-plus/haskell/rep1/: Main.hs  run.sh  test.hs  test.sh  todo-server.cabal
data_baseline/openrouter__qwen__qwen3.7-plus/haskell/rep10/: Main.hs  run.sh  test.sh  todo-server.cabal
data_baseline/openrouter__qwen__qwen3.7-plus/haskell/rep2/: Main.hs  run.sh  test.sh  todo-api.cabal
data_baseline/openrouter__qwen__qwen3.7-plus/haskell/rep3/: Main.hs  run.sh  test.sh  todo-app.cabal
data_baseline/openrouter__qwen__qwen3.7-plus/haskell/rep4/: Main.hs  run.sh  test.sh  todo-server.cabal
data_baseline/openrouter__qwen__qwen3.7-plus/haskell/rep5/: Debug.hs  Main.hs  run.sh  test.sh  todo-app.cabal
data_mcp/gpt-5/rust/: server.pid
eval/: smart_run.sh  spec.md  test_server.sh
results_baseline/: test_cache.json  test_scores.jsonl
results_baseline/gpt-4.1-mini/assembly/: rep1.json  rep10.json  rep2.json  rep3.json  rep4.json  rep5.json  rep6.json  rep7.json  rep8.json  rep9.json
results_baseline/gpt-4.1-mini/c/: rep1.json  rep10.json  rep2.json  rep3.json  rep4.json  rep5.json  rep6.json  rep7.json  rep8.json  rep9.json
results_baseline/gpt-4.1-mini/java/: rep1.json  rep10.json  rep2.json  rep3.json  rep4.json  rep5.json  rep6.json  rep7.json  rep8.json  rep9.json
results_baseline/gpt-4.1-mini/javascript/: rep1.json  rep10.json  rep2.json  rep3.json  rep4.json  rep5.json  rep6.json  rep7.json  rep8.json  rep9.json
results_baseline/gpt-4.1-mini/lean/: rep1.json  rep10.json  rep2.json  (+7 more)
results_mcp/: test_scores.jsonl
scheduler/: run_tests.py  scheduler.py  scheduler_mcp.py  watchdog.sh
(+2516 files in other folders)
