cabal-version:       >=1.10

name:                todo-app
version:             0.1.0.0
build-type:          Simple

executable todo-app
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <5,
                       scotty,
                       warp,
                       wai,
                       http-types,
                       aeson,
                       text,
                       bytestring,
                       time,
                       stm,
                       containers,
                       uuid,
                       uuid-types,
                       cookie,
                       wai-extra
