cabal-version:       2.4
name:                todo-hs
version:             0.1.0.0
build-type:          Simple

executable todo-server
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:     Haskell2010
  ghc-options:         -Wall -O2
  build-depends:
      base >=4.14 && <5
    , aeson >=2.0
    , text >=1.2
    , bytestring >=0.10
    , containers >=0.6
    , wai >=3.2
    , warp >=3.3
    , http-types >=0.12
    , uuid >=1.3
    , time >=1.9
    , cookie >=0.4
