cabal-version:       >=1.10

name:                todo-app
version:             0.1.0.0
author:              OpenAI
maintainer:          example@example.com
build-type:          Simple

executable todo-app
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5,
                       aeson,
                       bytestring,
                       containers,
                       text,
                       time,
                       stm,
                       scotty,
                       warp,
                       http-types,
                       wai,
                       cookie,
                       uuid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
