cabal-version:       >=1.10

name:                todo-app
version:             0.1.0.0
build-type:          Simple
license:             BSD3
author:              AI
maintainer:          ai@example.com
synopsis:            In-memory Todo App server with cookie auth
category:            Web

executable todo-app
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.7 && <5,
                       scotty,
                       aeson,
                       text,
                       bytestring,
                       containers,
                       time,
                       uuid,
                       uuid-types,
                       stm,
                       http-types,
                       wai,
                       warp
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
