cabal-version:       >=1.10

name:                todoapp
version:             0.1.0.0
synopsis:            In-memory Todo App server with cookie auth
category:            Web
build-type:          Simple

executable todoapp
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:
      base >=4.12 && <5
    , aeson >=2.0
    , bytestring
    , text
    , scotty >=0.12 && <0.31
    , warp >=3.2
    , containers
    , time
    , uuid >=1.3
    , uuid-types
    , random
    , http-types
    , transformers
    , wai
