cabal-version:       >=1.10

name:                todo-server
version:             0.1.0.0
build-type:          Simple

executable todo-server
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >=4.12 && <5,
                       wai >=3.2,
                       warp >=3.2,
                       aeson >=1.4 && <2.3,
                       text >=1.2,
                       bytestring >=0.10,
                       containers >=0.6,
                       stm >=2.5,
                       uuid >=1.3,
                       uuid-types >=1.0,
                       time >=1.9,
                       http-types >=0.12,
                       cookie >=0.4
