cabal-version:       2.4

name:                todo-app
version:             0.1.0.0
license:             BSD-3-Clause
build-type:          Simple

executable todo-app
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       aeson,
                       text,
                       bytestring,
                       time,
                       stm,
                       uuid,
                       cookie,
                       http-types,
                       servant,
                       servant-server,
                       wai,
                       warp
