cabal-version:       2.4
name:                todo-api
version:             0.1.0.0
build-type:          Simple

executable todo-api-exe
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       scotty >= 0.12,
                       aeson >= 1.5,
                       text >= 1.2,
                       bytestring >= 0.10,
                       containers >= 0.6,
                       unordered-containers >= 0.2,
                       time >= 1.9,
                       transformers >= 0.5,
                       mtl >= 2.2,
                       stm >= 2.5,
                       http-types >= 0.12,
                       wai >= 3.2
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N