cabal-version:       2.4
name:                rep10
version:             0.1.0.0
build-type:          Simple

maintainer:          Maintainer
synopsis:            Todo REST API Server
description:         RESTful API service for managing todos
license:             BSD-3-Clause
LICENSE-file:        LICENSE

executable rep10-exe
  main-is:           Main.hs
  hs-source-dirs:    app
  build-depends:     base >= 4.7 && < 5,
                     wai,
                     warp,
                     scotty,
                     text,
                     aeson,
                     bytestring,
                     http-types,
                     cookie,
                     time,
                     containers,
                     random,
                     stm,
                     cryptonite,
                     memory,
                     utf8-string
  default-language:  Haskell2010