name:                todo-app
version:             0.1.0.0
synopsis:            Todo App with Authentication
description:         High safety critical todo application with cookie auth
homepage:            https://github.com/example/todo-app
license:             MIT
author:              Developer
maintainer:          dev@example.com
build-type:          Simple
cabal-version:       >=1.10

executable todo-app
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base >=4.7 && <5,
                     scotty >= 0.11,
                     aeson,
                     text,
                     containers,
                     uuid,
                     time,
                     optparse-applicative,
                     random,
                     http-types
  default-language:  Haskell2010