cabal-version: 3.12
name: haskell-todo-server
version: 0.1.0.0
synopsis: Todo API server
description: Please see README on GitHub at <https://github.com/github/haskell-todo-server#readme>
license: MIT
license-file: LICENSE
author: Your Name
maintainer: example@example.com
copyright: 2023 Your Name
category: Web

executable rep3-exe
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  build-depends: base >=4.7 && <5,
                 scotty >= 0.13,
                 aeson >= 1.5,
                 text >= 1.2,
                 containers >= 0.6,
                 random >= 1.1,
                 uuid >= 1.3,
                 http-types >= 0.12,
                 wai-extra >= 3.0,
                 bytestring >= 0.10,
                 time >= 1.9,
                 split >= 0.2,
                 microlens >= 0.4,
                 lens >= 4.19,
                 wai >= 3.2
  default-language: Haskell2010