name:                todo-app
version:             0.1.0.0
license:             MIT
author:              "Your Name"
maintainer:          "your.email@example.com"
category:            Web
build-type:          Simple
cabal-version:       2.0

executable todo-app
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       scotty >=0.11,
                       aeson >=1.4,
                       text >=1.2,
                       containers >=0.6,
                       time >=1.9,
                       uuid >=1.3,
                       wai-extra >=3.0,
                       random >=1.1,
                       bytestring >=0.10,
                       http-types >=0.12,
                       wai >=3.2,
                       pureMD5 >=2.1,
                       utf8-string >=1.0
  default-language:    Haskell2010