cabal-version: 3.0
name:            todo-app
version:         0.1.0
synopsis:        Todo application with session auth
description:     A REST API server for managing todo items with cookie-based authentication
homepage:        https://github.com/user/todo-app
license:         MIT
author:          Developer
maintainer:      example@example.com

executable todo-server
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.7 && <5,
                    scotty >= 0.11,
                    wai,
                    wai-extra,
                    text,
                    aeson,
                    containers,
                    time,
                    uuid,
                    http-types,
                    cookie,
                    bytestring,
                    stm

  default-language: Haskell2010