cabal-version:      2.4
name:               todo-api
version:            0.1.0.0
synopsis:           Todo API server with authentication
description:        High-performance todo API server with cookie-auth
license:            MIT
author:             Your Name
maintainer:         example@example.com
build-type:         Simple

library
  exposed-modules:    Types, Models, Auth
  other-modules:
  hs-source-dirs:     src
  build-depends:      base >= 4.7 && < 5,
                      scotty,
                      aeson,
                      text,
                      containers,
                      random,
                      time,
                      stm,
                      wai-cors,
                      http-types,
                      bytestring
  default-language:   Haskell2010

executable todo-server
  main-is:            Main.hs
  other-modules:      Types, Models, Auth
  hs-source-dirs:     src
  build-depends:      base >= 4.7 && < 5,
                      todo-api,
                      scotty,
                      aeson,
                      text,
                      containers,
                      random,
                      time,
                      stm,
                      wai-cors,
                      http-types,
                      bytestring
  default-language:   Haskell2010