cabal-version:      2.0
name:               todo-app
version:            0.1.0.0
build-type:         Simple

executable todo-app
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.7 && <5,
                    scotty >= 0.11,
                    wai,
                    warp,
                    http-types,
                    text,
                    containers,
                    bytestring,
                    aeson,
                    time,
                    random,
                    unordered-containers,
                    transformers,
                    mtl
                    
  default-language: Haskell2010