cabal-version: 3.0
name:                todo-app
version:             0.1.0.0
synopsis:            A todo application with cookie-based authentication
description:         A todo REST API server implemented in Haskell
homepage:            https://github.com/yourname/todo-app
license:             BSD-3-Clause
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            Web
build-type:          Simple

executable todo-app
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base >=4.7 && <5,
                     scotty >= 0.11.5,
                     aeson >= 1.4.7.1,
                     text >= 1.2.4.0,
                     containers >= 0.6.2.1,
                     random >= 1.2.0,
                     http-types >= 0.12.3,
                     time >= 1.9.3,
                     uuid >= 1.3.14,
                     bytestring >= 0.10.12.1,
                     utf8-string >= 1.0.2,
                     wai >= 3.2.3,
                     case-insensitive >= 1.2.1.0
  default-language:   Haskell2010