cabal-version: 3.12
name:           todo-app
version:        0.1.0.0
synopsis:       Todo app server
description:    Please see README on GitHub at <https://github.com/githubuser/todo-app#readme>
homepage:       https://github.com/githubuser/todo-app#readme
bug-reports:    https://github.com/githubuser/todo-app/issues
license:        BSD-3-Clause
license-file:   LICENSE
author:         Author name here
maintainer:     example@example.com
copyright:      2023 Author name here
category:       Web
build-type:     Simple

library
  exposed-modules: Lib
  other-modules:   
  hs-source-dirs: src
  build-depends:   base >= 4.7 && < 5,
                   scotty >= 0.12,
                   aeson >= 2.0,
                   text >= 1.2.5,
                   containers >= 0.6.7,
                   unordered-containers >= 0.2.17,
                   transformers >= 0.5.6,
                   http-types >= 0.12,
                   split >= 0.2.3.5,
                   time >= 1.11,
                   uuid >= 1.3.14,
                   bytestring >= 0.11
  default-language: Haskell2010

executable todo-app
  main-is:        Main.hs
  hs-source-dirs: src, app
  ghc-options: -Wall
  build-depends:  base >= 4.7 && < 5,
                  todo-app,
                  scotty >= 0.12,
                  aeson >= 2.0,
                  text >= 1.2.5,
                  containers >= 0.6.7,
                  unordered-containers >= 0.2.17,
                  transformers >= 0.5.6,
                  http-types >= 0.12,
                   split >= 0.2.3.5,
                   time >= 1.11,
                   uuid >= 1.3.14,
                   bytestring >= 0.11
  default-language: Haskell2010