[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"