[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
regex = "1.10.6"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"