[package]
name = "todo_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
http = "1.0"
headers = "0.4"
rand = "0.8"
async-trait = "0.1"