cabal-version:      2.4
name:               todo-server
version:            0.1.0.0
build-type:         Simple

executable todo-server
  main-is:          Main.hs
  build-depends:    base >= 4.14 && < 5
                  , scotty
                  , aeson
                  , text
                  , bytestring
                  , time
                  , uuid
                  , transformers
                  , containers
                  , stm
                  , cryptonite
                  , http-types
                  , wai
  default-language: Haskell2010
