cabal-version:      2.4
name:               todo-api
version:            0.1.0.0
build-type:         Simple

executable todo-api
  main-is:          Main.hs
  build-depends:    base >= 4.14 && < 5
                  , scotty
                  , aeson
                  , text
                  , time
                  , uuid
                  , stm
                  , bytestring
                  , containers
                  , http-types
                  , wai
  default-language: Haskell2010
  ghc-options:      -O2 -Wall
