cabal-version:      2.4
name:               todo-app
version:            0.1.0.0
synopsis:           Todo App REST API
license:            MIT
author:             Author
build-type:         Simple

executable todo-app
  main-is:          Main.hs
  build-depends:    base >= 4.14 && < 5
                  , scotty
                  , aeson
                  , text
                  , bytestring
                  , time
                  , transformers
                  , containers
                  , uuid
                  , http-types
                  , wai
                  , case-insensitive
  default-language: Haskell2010
  ghc-options:      -Wall -O2
