cabal-version:      2.4
name:               todo-server
version:            0.1.0.0
build-type:         Simple

executable todo-server
  main-is:          Main.hs
  build-depends:    base >= 4.14 && < 5
                  , aeson
                  , bytestring
                  , text
                  , time
                  , containers
                  , stm
                  , servant
                  , servant-server
                  , warp
                  , cookie
                  , uuid
  default-language: Haskell2010
  ghc-options:      -Wall -O2
