cabal-version:      2.4
name:               todo-app
version:            0.1.0.0
author:             Author
maintainer:         author@example.com
build-type:         Simple

executable todo-app
  main-is:          Main.hs
  build-depends:    base,
                    scotty,
                    wai,
                    warp,
                    aeson,
                    text,
                    bytestring,
                    uuid,
                    mtl,
                    time,
                    crypton,
                    containers,
                    http-types
  default-language: Haskell2010
  ghc-options:      -O2 -Wall
